tests/test_exception/bad/output/exceptions_cycle.catala_en.A.Interpret
[ERROR] Cyclic dependency detected between exceptions!

Cyclic exception for definition of variable "x", declared here:
  --> tests/test_exception/bad/exceptions_cycle.catala_en
   | 
16 |   label exception_exception_x
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^
17 |   exception exception_x
   |   ^^^^^^^^^^^^^^^^^^^^^
18 |   definition x equals 2
   |   ^^^^^^^^^^^^^^^^^^^^^^
   + 

Used here in the definition of another cyclic exception for defining "x":
  --> tests/test_exception/bad/exceptions_cycle.catala_en
   | 
18 |   definition x equals 2
   |              ^
   + Test

Cyclic exception for definition of variable "x", declared here:
  --> tests/test_exception/bad/exceptions_cycle.catala_en
   | 
12 |   label exception_x
   |   ^^^^^^^^^^^^^^^^
13 |   exception base_x
   |   ^^^^^^^^^^^^^^^^
14 |   definition x equals 1
   |   ^^^^^^^^^^^^^^^^^^^^^^
   + 

Used here in the definition of another cyclic exception for defining "x":
  --> tests/test_exception/bad/exceptions_cycle.catala_en
   | 
14 |   definition x equals 1
   |              ^
   + Test

Cyclic exception for definition of variable "x", declared here:
  --> tests/test_exception/bad/exceptions_cycle.catala_en
   | 
 8 |   label base_x
   |   ^^^^^^^^^^^
 9 |   exception exception_exception_x
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
10 |   definition x equals 0
   |   ^^^^^^^^^^^^^^^^^^^^^^
   + 

Used here in the definition of another cyclic exception for defining "x":
  --> tests/test_exception/bad/exceptions_cycle.catala_en
   | 
10 |   definition x equals 0
   |              ^
   + Test
